--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,15 +7,19 @@ services:
       - POSTGRES_USER=my_db_user
       - POSTGRES_PASSWORD=my_db_password
       - POSTGRES_DB=my_db_name
+    volumes:
+      - my_db_data:/var/lib/postgresql/data
   web:
     build:
       context: ..
       dockerfile: docker/Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ..:/server
+      - ..:/ticketsite
     ports:
       - "8000:8000"
     depends_on:
       - db
- 
+
+volumes:
+  my_db_data:
